<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_image_girl">

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.98">

        <ImageButton
            android:id="@+id/addNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/main_button_bg"
            android:contentDescription="@string/add_note_description"
            android:minWidth="64dp"
            android:minHeight="64dp"
            android:onClick="goToAddNote"
            android:src="@drawable/baseline_add_24"
            android:tint="@color/main_color"/>

        <ImageButton
            android:id="@+id/addFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/main_button_bg"
            android:contentDescription="@string/add_folder_description"
            android:minWidth="64dp"
            android:minHeight="64dp"
            android:onClick="goToAddFolder"
            android:src="@drawable/baseline_create_new_folder_24"
            android:tint="@color/main_color"/>

        <ImageButton
            android:id="@+id/bin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/main_button_bg"
            android:contentDescription="@string/bin_description"
            android:onClick="goToBin"
            android:minWidth="64dp"
            android:minHeight="64dp"
            android:src="@drawable/baseline_air_24"
            android:tint="@color/main_color"/>

    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:background="@color/main_bg_color"
            app:layout_constraintBottom_toTopOf="@+id/tableRow4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.035"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>