<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/folders_layout"
    android:backgroundTint="@color/main_bg_color"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/base_button_bg"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/folderListTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="16dp"
                android:background="@null"
                android:ems="7"
                android:layout_weight="4"
                android:hint="@string/title"
                android:singleLine="true"
                android:textColor="@color/main_color"
                android:textColorHint="@color/main_color"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/folderListExpand"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/main_button_selected_bg"
                android:contentDescription="@string/expand"
                android:layout_weight="0"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/baseline_arrow_drop_down_24"
                android:tint="@color/main_color"/>

            <ImageButton
                android:id="@+id/folderListBin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="0"
                android:background="@drawable/main_button_selected_bg"
                android:contentDescription="@string/bin_description"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/baseline_air_24"
                android:tint="@color/main_color"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/noteRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

    </TableLayout>
</androidx.cardview.widget.CardView>